**************************************************
*              2.9 SERIES NEWS                   *
**************************************************

CONTAINERS

C-LEVEL FACILITIES

UTILITIES

STRING MATCHING

o Added the "whichPDict" generic function with a method for XString objects.

o Major rework of the PDict class, subclasses and the PDict() constructor:
    - Merged the CWdna_PDict and TBdna_PDict classes into the TB_PDict class
      (subclass of the PDict VIRTUAL class), a new container for storing a
      Trusted Band PDict object.
    - There are now 2 types of preprocessing: the "ACtree" type (the default)
      and the "Twobit" type.
    - Added the MTB_PDict class (another subclass of the PDict VIRTUAL class),
      a container for storing a Multiple Trusted Band PDict object.
    - The methods defined for PDict objects are now: length, width, names,
      [[, head, tb, tb.width, tail, show, duplicated and patternFrequency.
    - Changed the signature of the PDict() constructor: no more 'drop.head'
      and 'drop.tail' args, and new 'tb.width' and 'type' args.
  See ?PDict for the details (especially for the limitations of each type of
  preprocessing).

STRING ALIGNMENT

o Added support for character vectors of any length and XStringSet objects to
  the pattern argument of the pairwiseAlignment function.

o Added "subjectOverlap" and "patternOverlap" pairwise sequence alignments.

o Added support for Solexa quality scores in pairwise sequence alignment
  calculations.

o Added a stringDist function to calculate the Levenshtein edit distance
  between elements of a character vector or XStringSet.

o Added many methods for pairwise alignment objects including compareStrings,
  coverage, mismatchSummary, mismatchTable, nindel, nmatch, nmismatch, pattern,
  rep, subject, summary, views.

o Removed the XStringAlign class and added classes PairwiseAlignment,
  AlignedXStringSet, QualityAlignedXStringSet, and PairwiseAlignmentSummary.

MISCELLANEOUS

