@@ -15,6 +15,8 @@
 #ifndef BIOSTRINGS_DEFINES_H
 #define BIOSTRINGS_DEFINES_H
 
+#include "IRanges_defines.h"
+
 #include <Rdefines.h>
 #include <R_ext/Rdynload.h>
 
