@@ -58,7 +58,7 @@ static int start2offset(int safe_start)
 	return --safe_start;
 }
 
-void narrow_RoSeqs(RoSeqs *seqs,
+static void narrow_RoSeqs(RoSeqs *seqs,
 		const int *safe_starts, const int *safe_widths)
 {
 	int i;
@@ -163,21 +163,6 @@ RoSeqs _new_RoSeqs_from_XStringSet(int nseq, SEXP x)
 	return seqs;
 }
 
-RoSeqs _new_RoSeqs_from_XStringList(int nseq, SEXP x)
-{
-	RoSeqs seqs;
-	RoSeq *elt1;
-	int i;
-
-	if (nseq > _get_XStringList_length(x))
-		error("_new_RoSeqs_from_XStringList(): "
-		      "'nseq' must be <= '_get_XStringList_length(x)'");
-	seqs = new_RoSeqs(nseq);
-	for (i = 0, elt1 = seqs.elts; i < nseq; i++, elt1++)
-		*elt1 = _get_XStringList_elt_asRoSeq(x, i);
-	return seqs;
-}
-
 
 /****************************************************************************
  * Converting a set of sequences into an XRaw object.
@@ -217,7 +202,7 @@ SEXP new_XRaw_from_STRSXP(SEXP x, SEXP safe_starts, SEXP safe_widths,
 	}
 	seqs = _new_RoSeqs_from_STRSXP(nseq, x);
 	narrow_RoSeqs(&seqs, INTEGER(safe_starts), INTEGER(safe_widths));
-	return _new_XRaw_from_RoSeqs(seqs, lkup);
+	return _new_XRaw_from_RoSeqs(&seqs, lkup);
 }
 
 /*
@@ -231,99 +216,6 @@ SEXP new_XRaw_from_XString(SEXP x, SEXP safe_starts, SEXP safe_widths, SEXP lkup
 	nseq = LENGTH(safe_starts);
 	seqs = _new_RoSeqs_from_XString(nseq, x);
 	narrow_RoSeqs(&seqs, INTEGER(safe_starts), INTEGER(safe_widths));
-	return _new_XRaw_from_RoSeqs(seqs, lkup);
-}
-
-
-/****************************************************************************
- * Converting a list of sequences into an XStringList object.
- */
-
-static SEXP new_XStringList(const char *class, SEXP seqs)
-{
-	SEXP class_def, ans;
-
-	class_def = MAKE_CLASS(class);
-	PROTECT(ans = NEW_OBJECT(class_def));
-	SET_SLOT(ans, mkChar("seqs"), seqs);
-	UNPROTECT(1);
-	return ans;
-}
-
-/*
- * --- .Call ENTRY POINT ---
- */
-SEXP new_XStringList_from_XRaw(SEXP x, SEXP safe_starts, SEXP safe_widths, SEXP proto)
-{
-	int nseq, x_length, i;
-	SEXP ans, ans_seqs, ans_seq, xdata;
-	const int *safe_start, *safe_width;
-	char classbuf[14]; // longest string will be "DNAStringList"
-
-	if (LENGTH(safe_starts) != LENGTH(safe_widths))
-		error("'safe_starts' and 'safe_widths' must have the same length");
-	nseq = LENGTH(safe_starts);
-	x_length = _get_XRaw_length(x);
-	PROTECT(ans_seqs = NEW_LIST(nseq));
-	for (i = 0, safe_start = INTEGER(safe_starts), safe_width = INTEGER(safe_widths);
-	     i < nseq;
-	     i++, safe_start++, safe_width++) {
-		PROTECT(ans_seq = duplicate(proto));
-		PROTECT(xdata = duplicate(x));
-		SET_SLOT(ans_seq, mkChar("xdata"), xdata);
-		SET_SLOT(ans_seq, mkChar("offset"), ScalarInteger(start2offset(*safe_start)));
-		SET_SLOT(ans_seq, mkChar("length"), ScalarInteger(*safe_width));
-		SET_ELEMENT(ans_seqs, i, ans_seq);
-		UNPROTECT(2);
-	}
-	snprintf(classbuf, sizeof(classbuf), "%sList", _get_class(proto));
-	ans = new_XStringList(classbuf, ans_seqs);
-	UNPROTECT(1);
-	return ans;
-}
-
-/*
- * --- .Call ENTRY POINT ---
- */
-SEXP narrow_XStringList(SEXP x, SEXP safe_starts, SEXP safe_widths, SEXP proto)
-{
-	int nseq, i, offset;
-	SEXP x_seqs, x_seq, ans, ans_seqs, ans_seq, xdata;
-	const int *safe_start, *safe_width;
-	char classbuf[14]; // longest string will be "DNAStringList"
-	const char *class;
-
-	nseq = _get_XStringList_length(x);
-	if (LENGTH(safe_starts) != nseq || LENGTH(safe_widths) != nseq)
-		error("invalid length of 'safe_starts' or 'safe_widths'");
-	x_seqs = GET_SLOT(x, install("seqs"));
-	PROTECT(ans_seqs = NEW_LIST(nseq));
-	for (i = 0, safe_start = INTEGER(safe_starts), safe_width = INTEGER(safe_widths);
-	     i < nseq;
-	     i++, safe_start++, safe_width++) {
-	        x_seq = VECTOR_ELT(x_seqs, i);
-		if (proto == R_NilValue) {
-			PROTECT(ans_seq = duplicate(x_seq));
-		} else {
-			PROTECT(ans_seq = duplicate(proto));
-			PROTECT(xdata = duplicate(GET_SLOT(x_seq, install("xdata"))));
-			SET_SLOT(ans_seq, mkChar("xdata"), xdata);
-			UNPROTECT(1);
-		}
-		offset = INTEGER(GET_SLOT(x_seq, install("offset")))[0] + *safe_start - 1;
-		SET_SLOT(ans_seq, mkChar("offset"), ScalarInteger(offset));
-		SET_SLOT(ans_seq, mkChar("length"), ScalarInteger(*safe_width));
-		SET_ELEMENT(ans_seqs, i, ans_seq);
-		UNPROTECT(1);
-	}
-	if (proto == R_NilValue) {
-		class = _get_class(x);
-	} else {
-		snprintf(classbuf, sizeof(classbuf), "%sList", _get_class(proto));
-		class = classbuf;
-	}
-	ans = new_XStringList(class, ans_seqs);
-	UNPROTECT(1);
-	return ans;
+	return _new_XRaw_from_RoSeqs(&seqs, lkup);
 }
 
